--- a/herramienta/src/main/resources/application.properties
+++ b/herramienta/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=herramienta
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ProyectoSpring
-spring.sql.init.encoding=UTF-8
-spring.datasource.username=postgres
-spring.datasource.password=93227jesus
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ProyectoSpring
+#spring.sql.init.encoding=UTF-8
+#spring.datasource.username=postgres
+#spring.datasource.password=93227jesus
                     
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/renta_herramienta
@@ -17,4 +17,22 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.username=wilmer
 #spring.datasource.password=1034310528
 #spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.datasource.url=jdbc:postgresql://dpg-d0r6l0vdiees73bo7f9g-a.oregon-postgres.render.com:5432/renta_herramienta_ecpw
+spring.datasource.username=wilmer
+spring.datasource.password=eOi0q4xs0or55YuboIUy50xMSTSpUs8R
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Opcional: inicializar DB en cada arranque (solo si necesitas insertar datos por script)
+#spring.sql.init.mode=always
+spring.sql.init.encoding=UTF-8
+
+# JPA y Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+
 
